@@ -18,5 +18,9 @@ Breaking Changes
 Changes
 =======
 
+- Implemented a performance optimization when ``IN()`` or ``= ANY()`` operators
+  are used with a subquery. For further details see:
+  https://github.com/crate/crate/issues/6755
+
 Fixes
 =====
